# Nodetto

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml  release-client.yml  release-server.yml
notto-client/: index.html  package-lock.json  package.json  vite.config.ts
notto-client/src/: App.tsx  types.ts
notto-client/src-tauri/: Cargo.toml
notto-client/src-tauri/icons/: icon.icns
notto-client/src-tauri/src/: commands.rs  lib.rs
notto-client/src-tauri/src/crypt/: mod.rs
notto-client/src-tauri/src/db/: mod.rs  operations.rs  schema.rs
notto-client/src-tauri/src/sync/: mod.rs  operations.rs  service.rs
notto-client/src/components/: AccountMenu.tsx  ConflictModal.tsx  DeleteNoteConfirmModal.tsx  Home.tsx  LogoutWorkspaceConfirmModal.tsx  NoteEditor.css  NoteEditor.tsx  Sync.tsx  Toaster.tsx
notto-client/src/components/Login/: CreateAccount.tsx  Login.tsx  LoginHome.tsx
notto-client/src/components/account/: AccountMenu.tsx  AuthForm.tsx  WorkspaceMenu.tsx
notto-client/src/components/icons/: Icon.tsx
notto-client/src/components/modals/: ConflictModal.tsx  DeleteNoteConfirmModal.tsx  LogoutWorkspaceConfirmModal.tsx
notto-client/src/components/note/: FolderView.tsx  NoteEditor.tsx  NoteHeader.tsx
notto-client/src/components/sidebar/: NoteTree.tsx  Sidebar.tsx
notto-client/src/lib/: commands.ts  crypt.ts  db.ts  errors.ts  sync.ts
notto-client/src/store/: general.tsx  modals.tsx  toasts.ts
notto-client/src/store/__tests__/: general.test.ts  modals.test.ts  toasts.test.ts
notto-client/src/test/: setup.ts
notto-server/: Cargo.toml  Dockerfile
notto-server-node/: package-lock.json  package.json  test-quickdb.js
notto-server-node/src/: index.ts
notto-server/migrations/: V1__init.sql
notto-server/src/: main.rs  migrations.rs  schema.rs
shared/src/: lib.rs
