[package]
name = "notto"
version = "0.0.13"
description = "A Tauri App" 
authors = ["Clément Pera"]
edition = "2021"
# TODO: complete

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "notto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
shared = { path = "../../shared" }
tauri = { version = "2.9", features = [] }
tauri-plugin-opener = "2.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version="0.37.0", features = ["chrono", "bundled"] }
tauri-plugin-log = "2.7.1"
argon2 = { version = "0.5.3", features = ["std"] }
aes-gcm = "0.10.3"
chrono = { version="0.4.42", features = ["serde"] }
bip39 = { version="2.2.0", features = ["rand"] }
reqwest = { version = "0.12.24", features = ["json", "blocking", "native-tls-vendored"] }
tokio = "1.48.0"
hex = "0.4.3"
uuid = { version = "1.19", features = ["v7"] }

[lints.rust]
unused_imports = "allow" #TODO: remove
